[package]
name = "pgdproxy"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
] }
postgres-protocol = "0.6.6"
bytes = "1.0"
fallible-iterator = "0.3"
tokio-util = { version = "0.7.9", features = ["codec"] }
futures = "0.3.28"
strum = { version = "0.25.0", features = ["derive"] }
async-recursion = "1.0.5"
clap = { version = "4.4.4", features = ["derive"] }

[dev-dependencies]
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
async-channel = "1.9.0"
